--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
 
-data_depurada.rar
-data_depurada/chemicals.csv
-data_depurada/earnings.csv
-data_depurada/KAGGLE_INCOME.csv
-data_depurada/NationalOutbreakPublicDataTool.csv
-data_depurada/water_usage.csv
-data_depurada/water_usage_dictionary.csv
+*.rar
 *.csv
 *.pyc
+*.png
+*.xml
+*.iml
+*.html
